--- a/Calculator/style.css
+++ b/Calculator/style.css
@@ -3,7 +3,7 @@ body {
     font-size: 40px;
     background-color:black;
     }
-.calculator {
+.calculator {sxza
     position: relative;
     top: 50px;
     left: 50px;
